[package]
name = "boltz-client"
description = "a boltz exchange client for swaps between BTC/LBTC & LN"
authors = ["i5hi <ishi@satoshiportal.com>", "Rajarshi Maitra <raj@bitshala.org>"]
version = "0.2.0"
edition = "2021"
license="MIT"

[lib]
name = "boltz_client"
path = "src/lib.rs"
doctest = false
crate-type = ["lib"] 

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
ureq = { version = "2.5.0", features = ["json", "native-tls"] }
bip39 = "2.0.0"
electrum-client = { version = "0.21.0", default-features=false, features = ["use-rustls-ring", "proxy"] }
bitcoin = {version = "0.32.2", features = ["rand", "base64", "rand-std"]}
elements = { version = "0.25.0", features = ["serde"] }
lightning-invoice = "0.32.0"
tungstenite = { version = "0.21.0", features = ["native-tls-vendored"] }
url = "2.5.0"
log = "^0.4"
env_logger = "0.7"
native-tls = "0.2.11"
hex = "0.4"
lnurl-rs = { version = "0.8.0", optional = true }

[patch.crates-io]
secp256k1-zkp = { git = "https://github.com/dangeross/rust-secp256k1-zkp.git", rev = "57d29b15269ca2ce3c3b118b6a72b66c1169e7b1" }

[dev-dependencies]
bitcoind = {version = "0.36.0", features = ["25_0"] }
elementsd = {version  = "0.11.0", features = ["22_1_1"] }

#Empty default feature set, (helpful to generalise in github actions)
[features]
default = []
lnurl = ["dep:lnurl-rs"]
